Проект  DAL "Слоя данных"

--- a/FinDesk2/FinDesk2.csproj
+++ b/FinDesk2/FinDesk2.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FinDesk.DAL\FinDesk.DAL.csproj" />
     <ProjectReference Include="..\FinDesk.Domain\FinDesk.Domain.csproj" />
   </ItemGroup>
 
