--- a/FinDesk2/appsettings.json
+++ b/FinDesk2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FinDesk-DB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
