--- a/FinDesk2/FinDesk2.csproj
+++ b/FinDesk2/FinDesk2.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\FinDesk.Domain\FinDesk.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
