--- a/FinDesk2/FinDesk2.csproj
+++ b/FinDesk2/FinDesk2.csproj
@@ -24,6 +24,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\BaseIssues\" />
+    <Folder Include="wwwroot\admin\" />
   </ItemGroup>
 
 </Project>
