--- a/FinDesk.DAL/FinDesk.DAL.csproj
+++ b/FinDesk.DAL/FinDesk.DAL.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210117181211_SimpleIssues.cs" />
+    <Compile Remove="Migrations\20210117181211_SimpleIssues.Designer.cs" />
+    <Compile Remove="Migrations\20210117183430_SimpleIssues2.cs" />
+    <Compile Remove="Migrations\20210117183430_SimpleIssues2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
