--- a/FinDesk2/appsettings.json
+++ b/FinDesk2/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FinDesk-DB;Integrated Security=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FinDesk-DB;Integrated Security=True;MultipleActiveResultSets=true",
+    "Test41Con1": "Data Source=RUMOWWSX28041;Initial Catalog=FinDesk-DB;Integrated Security=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
